Fix: workflows and playbooks paths

--- a/03-Security-Audit-Ansible/playbooks/security_audit.yml
+++ b/03-Security-Audit-Ansible/playbooks/security_audit.yml
@@ -39,4 +39,4 @@
 
           Statut du pare-feu:
           {{ ufw_status.stdout }}
-        dest: ../reports/security_audit_report.txt
+        dest: ./03-Security-Audit-Ansible/reports/security_audit_report.txt
